#ScopeTest
add_executable(StaticTest ScopeTest/StaticTest.cpp)
add_executable(ScopeTest ScopeTest/ScopeTest.cpp)
add_executable(BreakTest ScopeTest/BreakTest.cpp)

#Random Generation Test
add_executable(RandomTest RandomTest/RandomTest.cpp)

#CPP Primer Study
add_executable(CPPPrimerContent CPPPrimerContent/Test.cpp CPPPrimerContent/Test.h)

#File System Study
add_executable(FileTest FileSystemTest/FileSysTest.cpp)