add_executable(ExtHashMap ContainerStudy/ExtHashMap.cpp ContainerStudy/EmplaceBack.cpp)
add_executable(STLStudy ContainerStudy/STLTest.cpp)
add_executable(SmartPtrtest PtrReferenceStudy/SmartPtrtest.cpp)
add_executable(ReferenceTest PtrReferenceStudy/RReferencetest.cpp)
add_executable(SetUnionTest SetUnionTest.cpp)
add_executable(HashSet ContainerStudy/HashSet.cpp)
add_executable(HashMap ContainerStudy/HashMap.cpp)
add_executable(EmplaceBack ContainerStudy/EmplaceBack.cpp)
add_executable(PairLayout ContainerStudy/PairLayout.cpp)
add_executable(MoveSyntaxDemo PtrReferenceStudy/MoveSyntaxDemo.cpp )