add_executable(PthreadStudy PthreadTest.cpp)
target_link_libraries(PthreadStudy ${CMAKE_THREAD_LIBS_INIT})
add_executable(VectorMulTest VectorMultiplicationTest.cpp)
target_link_libraries(VectorMulTest ${CMAKE_THREAD_LIBS_INIT})
add_executable(RaceConditionTest RaceConditionTest.cpp)
target_link_libraries(RaceConditionTest ${CMAKE_THREAD_LIBS_INIT})
add_executable(SemaPhoreTest SemephoreTest.cpp)
target_link_libraries(SemaPhoreTest ${CMAKE_THREAD_LIBS_INIT})
add_executable(BarrierTest BarrierTest.cpp)
target_link_libraries(BarrierTest ${CMAKE_THREAD_LIBS_INIT})
add_executable(CPP11CVTest CPP11/CPP11ConditionVaraibleTest.cpp)
add_executable(CPP11THreadJOin CPP11/CPP11ThreadJoinTest.cpp)
add_executable(CVTest CVTest.cpp)
add_executable(CVTest2 CVTest2GlobalQueue.cpp)
target_link_libraries(CVTest2 ${CMAKE_THREAD_LIBS_INIT})