add_executable(PthreadStudy BeforeCpp11/PthreadTest.cpp)
target_link_libraries(PthreadStudy ${CMAKE_THREAD_LIBS_INIT})
add_executable(VectorMulTest BeforeCpp11/VectorMultiplicationTest.cpp)
target_link_libraries(VectorMulTest ${CMAKE_THREAD_LIBS_INIT})
add_executable(RaceConditionTest BeforeCpp11/RaceConditionTest.cpp)
target_link_libraries(RaceConditionTest ${CMAKE_THREAD_LIBS_INIT})
add_executable(SemaPhoreTest BeforeCpp11/SemephoreTest.cpp)
target_link_libraries(SemaPhoreTest ${CMAKE_THREAD_LIBS_INIT})
add_executable(BarrierTest BeforeCpp11/BarrierTest.cpp)
target_link_libraries(BarrierTest ${CMAKE_THREAD_LIBS_INIT})

add_executable(CVTest BeforeCpp11/CVTest.cpp)
add_executable(CVTest2 BeforeCpp11/CVTest2GlobalQueue.cpp)
target_link_libraries(CVTest2 ${CMAKE_THREAD_LIBS_INIT})
add_subdirectory(CPP11)