add_executable(ExtHashMap Container/ExtHashMap.cpp Container/EmplaceBack.cpp)
add_executable(STLStudy Container/STLTest.cpp)

add_executable(SetUnionTest Algorithm/SetUnionTest.cpp)
add_executable(HashSet Container/HashSet.cpp)
add_executable(HashMap Container/HashMap.cpp)
add_executable(EmplaceBack Container/EmplaceBack.cpp)
add_executable(PairLayout Container/PairLayout.cpp)
add_executable(SimpleTest Container/SimpleTest.cpp)
add_subdirectory(Utility)