add_executable(ExtHashMap Container/EmplaceBack.cpp)

add_executable(SetUnionTest Algorithm/SetUnionTest.cpp)
add_executable(HashSet Container/HashSet.cpp)
add_executable(HashMap Container/HashMap.cpp)
add_executable(EmplaceBack Container/EmplaceBack.cpp)
add_executable(PairLayout Container/PairLayout.cpp)
add_subdirectory(Utility)